main/default/objects/Quote_Location__c/Quote_Location__c.object-meta.xml
<CustomObject>
    <label>Quote Location</label>
    <nameField>
        <displayFormat>QL-{00000000}</displayFormat>
        <label>Quote Location Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>