main/default/objects/Quote_Location__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>CASESAFEID(Quote__r.Opportunity.AccountId)</formula>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>