main/default/objects/Quote_Location__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <formula>CASESAFEID(Quote__r.OpportunityId)</formula>
    <label>OpportunityId</label>
    <type>Text</type>
</CustomField>