main/default/objects/Quote_Location__c/fields/OriginCreation__c.field-meta.xml
<CustomField>
    <fullName>OriginCreation__c</fullName>
    <label>OriginCreation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>