main/default/objects/Quote_Location__c/fields/State_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>State_Review_Required__c</fullName>
    <formula>IF((Primary_Location__c  = true)  &amp;&amp; (Text(Quote__r.Contact.Home_State__c) &lt;&gt; Locations__r.State_Code__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Review Required</label>
    <type>Checkbox</type>
</CustomField>