main/default/objects/Quote_Location__c/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yard Storage</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>Building Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>